[package]
name = "block_breaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_asset_loader = { version = "0.12.0", features = ["2d"] }
bevy_prototype_lyon = "0.6.0"
iyes_loopless = "0.7.1"
rand = "0.8.5"
kayak_ui = { git = "https://github.com/StarArawn/kayak_ui", rev = "161ed4baf7406f5ac6c821abfb2f07ef9ed0e178", features = [
    "bevy_renderer",
] }
bevy_rapier2d = "0.16.0"
bevy_hanabi = { version = "0.4", default-features = false, features = ["2d"] }
