[package]
name = "block_breaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
bevy_asset_loader = { version = "0.14.0", features = ["2d"] }
bevy_prototype_lyon = "0.7.1"
iyes_loopless = "0.9.0"
rand = "0.8.5"
kayak_ui = "0.1"
bevy_rapier2d = "0.19.0"
[dependencies.bevy_hanabi]
# version = "0.5"
git = "https://github.com/djeedai/bevy_hanabi"
rev = "84a6d4fad47bacea229c955d34d192faa2650fdf"
default-features = false
features = ["2d"]
